--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,17 @@
-spring.application.name=inmemory-events-api
-spring.datasource.url=jdbc:h2:mem:eventsdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=root
-spring.datasource.password=Tixnn2127*
+# H2 Database (en memoria)
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+
+# Mostrar la consola H2
 spring.h2.console.enabled=true
-spring.jpa.hibernate.ddl-auto=update
+spring.h2.console.path=/h2-console
+
+# JPA
+
 spring.jpa.show-sql=true
+
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.mode=always
