--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,21 @@
 spring.application.name=inmemory-events-api
+
+# Configuración del tipo de repositorio
+# Valores posibles: inmemory, jpa
+# Por defecto usa inmemory (sin base de datos)
+repository.type=inmemory
+
+# H2 Database Configuration (solo se usa si repository.type=jpa)
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.h2.console.enabled=true
+
+# JPA / Hibernate (solo se usa si repository.type=jpa)
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+# Defer data initialization so tables are created before data.sql runs
+spring.jpa.defer-datasource-initialization=true
