--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,5 @@
 spring.application.name=inmemory-events-api
-
-# Configuración del tipo de repositorio
-# Valores posibles: inmemory, jpa
-# Por defecto usa inmemory (sin base de datos)
-repository.type=inmemory
+server.port=8081
 
 # H2 Database Configuration (solo se usa si repository.type=jpa)
 spring.datasource.url=jdbc:h2:mem:testdb
