--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,23 +1,22 @@
 spring.application.name=inmemory-events-api
 server.port=8081
 
-# ========== H2 Database Configuration ==========
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
-spring.h2.console.enabled=true
+# ==============================
+# Configuración de Base de Datos (MySQL)
+# ==============================
+# Ajusta los valores según tu instalación local de MySQL
+spring.datasource.url=jdbc:mysql://localhost:3306/inmemory_events?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=Tixnn2127*
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# ========== JPA / Hibernate Configuration ==========
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.defer-datasource-initialization=true
-
-# ========== SQL Logging & Performance Monitoring ==========
-# Mostrar SQL queries en consola
+# ==============================
+# Configuración de JPA / Hibernate
+# ==============================
+# Flyway gestionará el esquema, usamos validate para evitar crear tablas automáticamente
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql=true
-
-# Formatear SQL para mejor legibilidad
 spring.jpa.properties.hibernate.format_sql=true
 
 # Mostrar los valores de los parámetros en las queries
