task 1 HU 5 terminada

--- a/pom.xml
+++ b/pom.xml
@@ -140,6 +140,15 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
+            <plugin>
+                <groupId>org.flywaydb</groupId>
+                <artifactId>flyway-maven-plugin</artifactId>
+                <configuration>
+                    <url>jdbc:mysql://localhost:3306/inmemory_events?useSSL=false&amp;allowPublicKeyRetrieval=true&amp;serverTimezone=UTC</url>
+                    <user>root</user>
+                    <password>Tixnn2127*</password>
+                </configuration>
+            </plugin>
 
         </plugins>
     </build>
