--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,10 +11,17 @@ spring.datasource.password=Tixnn2127*
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # ==============================
+# Configuración de Flyway
+# ==============================
+spring.flyway.enabled=false
+# spring.flyway.baseline-on-migrate=true
+# spring.flyway.validate-on-migrate=false
+
+# ==============================
 # Configuración de JPA / Hibernate
 # ==============================
-# Flyway gestionará el esquema, usamos validate para evitar crear tablas automáticamente
-spring.jpa.hibernate.ddl-auto=validate
+# Flyway gestionará el esquema, pero usamos update temporalmente para sincronización
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
